--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,26 @@
             <artifactId>wsdl4j</artifactId>
         </dependency>
     </dependencies>
+<build>
+    <plugins>
+    <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxb2-maven-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+            <execution>
+                <id>xjc</id>
+                <goals>
+                    <goal>xjc</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+            <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+            <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+            <clearOutputDir>false</clearOutputDir>
+        </configuration>
+    </plugin>
+    </plugins>
+</build>
 </project>
